cambios en el link CORS

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
           </div>
         </div>
-        <p class="warning">WARNING!: En caso de no ver los valores de las divisas utilizar la extension <a href="https://chrome.google.com/webstore/detail/allow-cors-access-control/lhobafahddgcelffkeicbaginigeejlf?hl=es">CORS</a> </p>
+        <p class="warning">WARNING!: En caso de no ver los valores de las divisas utilizar la extension <a target="_blank" href="https://chrome.google.com/webstore/detail/allow-cors-access-control/lhobafahddgcelffkeicbaginigeejlf?hl=es">CORS</a> </p>
         <div class="footer-copyright text-center py-3 IndexCarrouselLetraM">© 2021 Conversor de Divisas Fernandez
         </div>
       </footer>
